--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>The Multidimensional Self-Control Scale</h1>
+        <h1>The Multidimensional Self-Control Scale (MSCS)</h1>
+        <p>
+            Nedenfor følger flere påstander. <br> <br>
+            Ta stilling til påstandene og svar for hvordan du vanligvis er. <br> <br>
+            Alle besvarelser er anonyme. Det vil ikke registreres noe personidentifserende informasjon i denne selvvurdeeringen.<br> <br>
+            Du vil få mest mulig utnytte av denne selvvurderingen ved å være ærliig mot deg selv. <br> <br>
+        </p>
         <form id="mcsForm">
             <div class="table-container">
                 <table>
