--- a/results.html
+++ b/results.html
@@ -11,12 +11,12 @@
     <div class="container">
         <h1>Dine MSCS-resultater</h1>
         <p>
-            Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br>
-            MSCS er hierarkisk modell med 3 nivåer.<br>
-            På grunnleggende nivå finner man 6 faktorer (prokratinering, konserntrasjon, impulser, emosjoner, målorientering og selvkontrollstrategier).<br>
-            På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br>
-            Inhibering består av prokratinering, konserntrasjon og impulser, mens initiering består av emosjoner, målorientering og selvkontrollstrategier.<br>
-            Det øverste nivået består av faktoren "selvkontroll" som er sammenstilling av alle de grunnlegende faktorene.<br>
+            Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br><br>
+            MSCS er hierarkisk modell med 3 nivåer.<br><br>
+            På grunnleggende nivå finner man 6 faktorer (prokratinering, konsentrasjon, impulser, emosjoner, målorientering og selvkontrollstrategier).<br><br>
+            På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br><br>
+            Inhibering består av prokratinering, konsentrasjon og impulser, mens initiering består av emosjoner, målorientering og selvkontrollstrategier.<br><br>
+            Det øverste nivået består av faktoren "selvkontroll" som er sammenstilling av alle de grunnlegende faktorene.<br><br>
             Her er en oppsummering av dine selvkontroll-faktorer:
         </p>
         <canvas id="resultsChart" width="400" height="200"></canvas>
