--- a/results.html
+++ b/results.html
@@ -13,8 +13,8 @@
         <p>
             Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br><br>
             MSCS er hierarkisk modell med tre nivåer.<br><br>
-            På grunnleggende nivå finner man seks faktorer (prokratinering, konsentrasjon, impulser, emosjoner, målorientering og selvkontrollstrategier).<br>
-            På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br><br>
+            På grunnleggende nivå finner man seks faktorer (prokratinering, konsentrasjon, impulser, emosjoner, målorientering og selvkontrollstrategier).<br><br>
+            På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br>
             Den første, inhibering, består av prokratinering, konsentrasjon og impulser. Den andre faktoren, initiering, består av emosjoner, målorientering og selvkontrollstrategier.<br><br>
             Det øverste nivået består av faktoren "selvkontroll" som er sammenstilling av alle de grunnlegende faktorene.<br><br>
             Her er en oppsummering av dine selvkontroll-faktorer:
