--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>
             Nedenfor følger flere påstander. <br> <br>
             Ta stilling til påstandene og svar for hvordan du vanligvis er. <br> <br>
-            Alle besvarelser er anonyme. Det vil ikke registreres noe personidentifserende informasjon i denne selvvurdeeringen.<br> <br>
+            Alle besvarelser er anonyme. Det vil ikke registreres noe personidentifserende informasjon i denne selvvurderingen.<br> <br>
             Du vil få mest mulig utnytte av denne selvvurderingen ved å være ærliig mot deg selv. <br> <br>
         </p>
         <form id="mcsForm">
