--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Nedenfor følger flere påstander. <br> <br>
             Ta stilling til påstandene og svar for hvordan du vanligvis er. <br> <br>
             Alle besvarelser er anonyme. Det vil ikke registreres noe personidentifserende informasjon i denne selvvurderingen.<br> <br>
-            Du vil få best utbytte ved å være ærliig mot deg selv. <br> <br>
+            Du vil få best utbytte ved å være ærlig mot deg selv. <br> <br>
         </p>
         <form id="mcsForm">
             <div class="table-container">
