--- a/results.html
+++ b/results.html
@@ -21,6 +21,10 @@
         </p>
         <canvas id="resultsChart" width="400" height="200"></canvas>
         <div id="resultsContainer"></div>
+        <p>
+            For mer lesestoff om MSCS, besøk <a href="https://www.researchgate.net/publication/344194832_The_Multidimensional_Self-Control_Scale_MSCS_Development_and_Validation#fullTextFileContent" target="_blank">denne lenken</a>.<br>
+            Samt: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank">denne lenken</a>
+        </p>
     </div>
     <script src="js/results.js"></script>
 </body>
