--- a/results.html
+++ b/results.html
@@ -11,19 +11,27 @@
     <div class="container">
         <h1>Dine MSCS-resultater</h1>
         <p>
+            MSCS modellen: The Multidimensional Self-Control Scale (MSCS) er utviklet for å måle selvkontroll og brukes aktivt i internasjonal selvkontrollforskning.<br><br>
             Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br><br>
             MSCS er hierarkisk modell med tre nivåer.<br><br>
-            På grunnleggende nivå finner man seks faktorer (prokratinering, konsentrasjon, impulser, emosjoner, målorientering og selvkontrollstrategier).<br><br>
+            På grunnleggende nivå finner man seks faktorer (prokrastinering, oppmerksomhetskontroll, impulskontroll, emosjonell kontroll, målorientering og selvkontrollstrategier).<br><br>
             På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br>
-            Den første, inhibering, består av prokratinering, konsentrasjon og impulser. Den andre faktoren, initiering, består av emosjoner, målorientering og selvkontrollstrategier.<br><br>
+            Den første, inhibering, består av prokrastinering, oppmerksomhetskontroll og impulskontroll. Den andre faktoren, initiering, består av emosjonell kontroll, målorientering og selvkontrollstrategier.<br><br>
             Det øverste nivået består av faktoren "selvkontroll" som er sammenstilling av alle de grunnlegende faktorene.<br><br>
             Her er en oppsummering av dine selvkontroll-faktorer:
         </p>
         <canvas id="resultsChart" width="400" height="200"></canvas>
         <div id="resultsContainer"></div>
         <p>
+            Prokrastinering: handler om tendensen til å utsette oppgaver og forpliktelser.<br>
+            Oppmerksomhetskontroll: handler om evnen til å opprettholde fokus og konsentrasjon.<br>
+            Impulskontroll: handler om evnen til å motstå umiddelbare impulser og fristelser.<br>
+            Emosjonell kontroll: handler om evnen til å regulere følelsesmessige reaksjoner.<br>
+            Målorientering: handler om hvor fokusert man er på kortsiktige og langsiktige mål.<br>
+            Selvkontrollstrategier: handler om strategier for å overvinne utfordringer og vanskeligheter.<br><br>
+
             For mer lesestoff om MSCS, besøk <a href="https://www.researchgate.net/publication/344194832_The_Multidimensional_Self-Control_Scale_MSCS_Development_and_Validation#fullTextFileContent" target="_blank">denne lenken</a>.<br>
-            Samt: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank">denne lenken</a>
+            samt: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank">denne lenken</a>
         </p>
     </div>
     <script src="js/results.js"></script>
