--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
         <p>
             MSCS modellen: The Multidimensional Self-Control Scale (MSCS) er utviklet for å måle selvkontroll og brukes aktivt i internasjonal selvkontrollforskning.<br><br>
             Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br><br>
-            MSCS er hierarkisk modell med tre nivåer.<br><br>
+            MSCS er en hierarkisk modell med tre nivåer.<br><br>
             <img src="MSCS.jpg" alt="MSCS hierarkisk modell"><br><br>
             På grunnleggende nivå finner man seks faktorer (prokrastinering, oppmerksomhetskontroll, impulskontroll, emosjonell kontroll, målorientering og selvkontrollstrategier).<br><br>
             På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br>
