--- a/results.html
+++ b/results.html
@@ -31,7 +31,7 @@
         <canvas id="resultsChart" width="400" height="200"></canvas>
         <div id="resultsContainer"></div>
         <p>
-            For dokumentasjon om MSCS og utviklingprosessen for MSCS, besøk <a href="https://www.researchgate.net/publication/344194832_The_Multidimensional_Self-Control_Scale_MSCS_Development_and_Validation#fullTextFileContent" target="_blank">denne lenken</a>.<br>
+            For dokumentasjon om MSCS og utviklingprosessen for MSCS, besøk <a href="https://www.researchgate.net/publication/344194832_The_Multidimensional_Self-Control_Scale_MSCS_Development_and_Validation#fullTextFileContent" target="_blank">denne lenken</a>.<br><br>
             Her vises det at ulike kombinasjoner at ikke bare enkelte personlighetstrekk, men også kombinasjoner av personlighetstrekk er viktig for vår selvkontroll: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank"> lenke</a>
         </p>
     </div>
