--- a/results.html
+++ b/results.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dine MSCS-resultater</h1>
+        <h1>Om MSCS og dine MSCS-resultater</h1>
         <p>
-            MSCS modellen: The Multidimensional Self-Control Scale (MSCS) er utviklet for å måle selvkontroll og brukes aktivt i internasjonal selvkontrollforskning.<br><br>
+            <h2>En hierarkisk modell</h2>
+            The Multidimensional Self-Control Scale (MSCS) er utviklet for å måle selvkontroll og brukes aktivt i internasjonal selvkontrollforskning.<br><br>
             Skårer vises på en 7-punktsskala. Hvor høyere skåre betyr at man viser at man har vurdert seg selv til høyere grad av et trekk, og motsatt.<br><br>
             MSCS er en hierarkisk modell med tre nivåer.<br><br>
             <img src="MSCS.jpg" alt="MSCS hierarkisk modell"><br><br>
@@ -19,14 +20,15 @@
             På mellomste nivå finner man to faktorer som hver er et sammendrag av de grunnleggende faktorene.<br>
             Den første, inhibering, består av prokrastinering, oppmerksomhetskontroll og impulskontroll. Den andre faktoren, initiering, består av emosjonell kontroll, målorientering og selvkontrollstrategier.<br><br>
             Det øverste nivået består av faktoren "selvkontroll" som er sammenstilling av alle de grunnlegende faktorene.<br><br>
-            Prokrastinering: handler om tendensen til å utsette oppgaver og forpliktelser.<br>
-            Oppmerksomhetskontroll: handler om evnen til å opprettholde fokus og konsentrasjon.<br>
-            Impulskontroll: handler om evnen til å motstå umiddelbare impulser og fristelser.<br>
-            Emosjonell kontroll: handler om evnen til å regulere følelsesmessige reaksjoner.<br>
-            Målorientering: handler om hvor fokusert man er på kortsiktige og langsiktige mål.<br>
+            <h2>Forklaring av faktorer</h2>
+            Prokrastinering: handler om tendensen til å utsette oppgaver og forpliktelser. Merk: skårer på prokrastinering er reverserte og fremstilles derfor som "fravær av prokrastinering". En høy skåre på fravær av prokrastinering indikerer at man har rapportert liten grad av prokrastinering.<br><br>
+            Oppmerksomhetskontroll: handler om evnen til å opprettholde fokus og konsentrasjon.<br><br>
+            Impulskontroll: handler om evnen til å motstå umiddelbare impulser og fristelser.<br><br>
+            Emosjonell kontroll: handler om evnen til å regulere følelsesmessige reaksjoner.<br><br>
+            Målorientering: handler om hvor fokusert man er på kortsiktige og langsiktige mål.<br><br>
             Selvkontrollstrategier: handler om strategier for å overvinne utfordringer og vanskeligheter.<br><br>
 
-            Her er en oppsummering av dine selvkontroll-faktorer:
+            <h2>Dine MSCS-resultater</h2>
         </p>
         <canvas id="resultsChart" width="400" height="200"></canvas>
         <div id="resultsContainer"></div>
