--- a/results.html
+++ b/results.html
@@ -34,7 +34,7 @@
         <div id="resultsContainer"></div>
         <p>
             For dokumentasjon om MSCS og utviklingprosessen for MSCS, besøk <a href="https://www.researchgate.net/publication/344194832_The_Multidimensional_Self-Control_Scale_MSCS_Development_and_Validation#fullTextFileContent" target="_blank">denne lenken</a>.<br><br>
-            Her vises det at ikke bare enkelte personlighetstrekk, men også kombinasjoner av personlighetstrekk er viktig for vår selvkontroll: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank"> lenke</a>
+            Her vises det at ikke bare enkelte personlighetstrekk, men også at ulike kombinasjoner av personlighetstrekk er viktig for vår selvkontroll: <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0307871" target="_blank"> lenke</a>
         </p>
     </div>
     <script src="js/results.js"></script>
